w00t        2005/12/08 10:09:05 UTC	(20051208-4039)
  Log:
  InspIRCd comment removed, as we're working on a new module supporting b6 protocol, and added a 'wtf' comment.

  Changes:	Modified:
  +3 -1		trunk/include/pmodule.h (File Modified) 


jilles      2005/12/08 01:18:01 UTC	(20051208-4037)
  Log:
  Move channel access over from host to vhost.
  This is probably less surprising and allows services cloaks
  in access lists.
  It could be useful to check hostmask-based channel access
  after identify/login now.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/xop.c (File Modified) 
  +2 -2		trunk/src/node.c (File Modified) 


jilles      2005/12/08 00:43:30 UTC	(20051208-4035)
  Log:
  Clarify a little.
  

  Changes:	Modified:
  +3 -3		trunk/help/cservice/flags (File Modified) 


jilles      2005/12/08 00:36:02 UTC	(20051208-4033)
  Log:
  /cs ban/unban:
  - Change chanacs_find() to chanacs_user_has_flag(), allowing
    hostmask access.
  - Require +r, +f does not suffice (this is consistent with
    akick requiring +rf).
  

  Changes:	Modified:
  +4 -8		trunk/modules/chanserv/ban.c (File Modified) 


jilles      2005/12/08 00:24:15 UTC	(20051208-4031)
  Log:
  - Change chanacs_find() to chanacs_user_has_flag() in a few places
  - Move /cs set email and /cs set url from +f to +s
  

  Changes:	Modified:
  +3 -6		trunk/modules/chanserv/set.c (File Modified) 


jilles      2005/12/08 00:22:46 UTC	(20051208-4029)
  Log:
  Mention how to clear the URL.
  

  Changes:	Modified:
  +2 -1		trunk/help/cservice/set_url (File Modified) 


jilles      2005/12/08 00:05:46 UTC	(20051208-4027)
  Log:
  /CS SET SECURE checks on mode changes:
  - Replace is_xop()/chanacs_find_host() combination with
    chanacs_user_flags()
  - Make SECURE apply to halfops as well
  

  Changes:	Modified:
  +14 -19	trunk/src/cmode.c (File Modified) 


jilles      2005/12/07 23:40:46 UTC	(20051207-4025)
  Log:
  Don't allow setting +b if the user has +b, require +r.